# wordle

./: LICENSE  pyproject.toml
wordle/: __main__.py
