[tool.poetry]
name = "wordle"
version = "0.0.0"
description = ""
authors = ["AKU <tom@tdpain.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.6.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
